# MiniWebEngine

./: .gitignore  BuildEmscripten.bat  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  vcpkg.json  vcpkgInstall.bat
Game/: CMakeLists.txt
Game/Private/: Camera.cpp  Inputs.cpp  Layer.cpp  Object.cpp  Render.cpp  RenderObject.cpp  Shader.cpp  Texture.cpp
Game/Public/: Camera.h  Inputs.h  Layer.h  Object.h  Render.h  RenderObject.h  Shader.h  Texture.h  main.cpp
Game/Ressources/: Cuby.fbx
Game/Ressources/Cisailleur/: A_Idle_Cisailleur.fbx  A_Tir_Cisailleur.fbx  SKM_Cisailleur.fbx  SK_Cisailleur.fbx
Game/Ressources/Hiro/: A_GardeIdle.fbx
Game/Ressources/Pig/: SK_Pig.fbx
Game/Ressources/Shaders/: UniformBlock.glsl  fShader.glsl  fShaderCharacter.glsl  fShaderSkyBox.glsl  fShaderText.glsl  fTest.glsl  vShader.glsl  vShaderCharacter.glsl  vShaderSkyBox.glsl  vShaderText.glsl  vTest.glsl
Game/Shaders/: fShaderTrace.glsl  fShaderTrace_Web.glsl  fShader_Web.glsl  vShader.glsl  vShaderTrace.glsl  vShaderTrace_Web.glsl  vShader_Web.glsl
Game/Sources/: main.cpp
Game/Sources/Core/Private/: Application.cpp  CameraManager.cpp  CollisionSystem.cpp  DefinesTools.cpp  Entity.cpp  Inputs.cpp  Log.cpp  Quadtree.cpp  Scene.cpp  SceneManager.cpp  WorldManager.cpp
Game/Sources/Core/Private/Components/: BaseComponent.cpp  CameraComponent.cpp  CollisionComponent.cpp  PhysicComponent.cpp  RenderComponent.cpp  ScriptComponent.cpp  TransformComponent.cpp
Game/Sources/Core/Private/Inputs/: InputManager.cpp
Game/Sources/Core/Private/Physics/: BasePhysics.cpp  PhysicSystem.cpp
Game/Sources/Core/Private/Prefab/: Pawn.cpp
Game/Sources/Core/Private/Scenes/: ComponentsUpdate.cpp  ComponentsUpdate.h  Scene.cpp  SceneManager.cpp
Game/Sources/Core/Private/Tools/: Profiling.cpp
Game/Sources/Core/Public/: Application.h  CameraManager.h  CollisionSystem.h  DefinesTools.h  Entity.h  Inputs.h  Log.h  Quadtree.h  Scene.h  SceneManager.h  Transform.h  Variant.h  WorldManager.h  gpch.h  main.cpp
Game/Sources/Core/Public/Components/: BaseComponent.h  CameraComponent.h  CollisionComponent.h  PhysicComponent.h  RenderComponent.h  ScriptComponent.h  TransformComponent.h
Game/Sources/Core/Public/Inputs/: InputManager.h
Game/Sources/Core/Public/Physics/: BasePhysics.h  PhysicSystem.h
Game/Sources/Core/Public/Prefab/: Pawn.h
Game/Sources/Core/Public/Scenes/: Scene.h
Game/Sources/Core/Public/Tools/: Callbacks.h  Defines.h  Profiling.h
Game/Sources/ECS/Private/: Components.cpp  Object.cpp
Game/Sources/ECS/Public/: Components.h  Object.h
Game/Sources/Editor/Private/: EditorApplication.cpp
Game/Sources/Editor/Public/: EditorApplication.h
Game/Sources/Game/Private/: Entitys.cpp  Ransac.cpp  ShapeDetection.cpp  World.cpp  WorldManager.cpp
Game/Sources/Game/Public/: Engine.h  Entitys.h  Ransac.h  ShapeDetection.h  World.h
Game/Sources/Inputs/Private/: Inputs.cpp
Game/Sources/Inputs/Public/: Inputs.h
Game/Sources/ProceduralGen/Private/: AlgoProcedural.cpp  Ground.cpp  PlaneGen.cpp  Skybox.cpp
Game/Sources/ProceduralGen/Public/: AlgoProcedural.h  Ground.h  PlaneGen.h  Skybox.h
Game/Sources/Render/Private/: BasicRender.cpp  Camera.cpp  CubeTexture.cpp  Drawable.cpp  Layer.cpp  Material.cpp  Mesh.cpp  OpenGLWindow.cpp  Render.cpp  RenderObject.cpp  Shader.cpp  ShaderLoader.cpp  Shaders.cpp  Texture.cpp  TextureBase.cpp  TextureManager.cpp  TraceObject.cpp  VertexObject.cpp
Game/Sources/Render/Private/Animation/: AnimationClip.cpp  AnimationLoader.cpp  AnimationPlayer.cpp  AnimationTrack.cpp
Game/Sources/Render/Private/Meshes/: Bone.cpp  Drawable.cpp  Mesh.cpp  MeshFactory.cpp  MeshLoader.cpp  SkeletalBone.cpp  SkeletalMesh.cpp  StaticMesh.cpp  Vertex.cpp
Game/Sources/Render/Private/OpenGL/: OpenGLWindow.cpp
Game/Sources/Render/Private/Texts/: FontLoader.cpp  Text.cpp  TextCharacter.cpp  TextCharacter.h
Game/Sources/Render/Private/Textures/: CubeTexture.cpp  Texture.cpp  TextureBase.cpp  TextureManager.cpp
Game/Sources/Render/Public/: BasicRender.h  Camera.h  CubeTexture.h  Drawable.h  Layer.h  Material.h  Mesh.h  OpenGLWindow.h  Render.h  RenderObject.h  Shader.h  ShaderLoader.h  Shaders.h  Texture.h  TextureBase.h  TextureManager.h  TraceObject.h  VertexObject.h
Game/Sources/Render/Public/Animation/: AnimationClip.h  AnimationLoader.h  AnimationPlayer.h  AnimationTrack.h
Game/Sources/Render/Public/Meshes/: Bone.h  Drawable.h  Mesh.h  MeshFactory.h  MeshLoader.h  SkeletalBone.h  SkeletalMesh.h  StaticMesh.h  Vertex.h
Game/Sources/Render/Public/OpenGL/: OpenGLWindow.h
Game/Sources/Render/Public/Texts/: FontLoader.h  Text.h
Game/Sources/Render/Public/Textures/: TextureBase.h
Game/Sources/Shaders/: fShader.glsl  vShader.glsl  vShader_Web.glsl
Web/: .ninja_deps  .ninja_log  Build.bat  CMakeCache.txt  LaunchServer.bat  build.ninja  cmake_install.cmake
Web/Game/: cmake_install.cmake
